Update SecurityConfig.java